# langchain_learn

./: .gitignore  pyproject.toml
RAG/qdrant/: 01_qdrant_demo.py  02_langchain_qdrant_demo.py
deepagents/: 01_deepagents_demo.py
langgraph/: 01_chat_model.ipynb  02_messages.ipynb  03_tools.ipynb  04_langgraph_basic.ipynb  05_conditional_edges.ipynb  06_chat_bot_demo.ipynb  07_tools_subagent.ipynb  08_state.ipynb  09_runtine_configuration.ipynb  10_send_map_reduce.ipynb  11_command.ipynb  12_checkpoints.ipynb  13_interrupts.ipynb  chat_model.ipynb  test.ipynb
langgraph/.ipynb_checkpoints/: Untitled-checkpoint.ipynb
learn_claude_code/: 00_agent开发是什么.ipynb  01_agent循环.ipynb  02_tool_use工具使用.ipynb  03_todoWrite待办写入.ipynb  04_sub_agents子智能体.ipynb  05_skill_load_skill加载.ipynb  06_context_compact上下文压缩.ipynb
research_agent/backend/: README.md  pyproject.toml
research_agent/backend/app/: api.py  config.py  crud.py  database.py  main.py  models.py  schemas.py  services.py
research_agent/frontend/: .gitignore  index.html  package-lock.json  package.json
research_agent/frontend/src/: App.vue  (+2 more)
src/: 01_chat_models.py
src/01_chat_models/: 02_multi_talk.py  03_multi_talk_stream.py  04_chat_models_temprature.py  05_chat_models_prompt.py  06_chat_models_batch.py  07_chat_models_structure_output.py
src/02_semantic_search/: 01_semantic_search.py  01_semantic_search_index.py  02_semantic_search_query.py  03_semantic_search_chain.py  04_chromadb_tools.py  05_chroma_score.py
src/03_agent/: 01_agent_basic.py  02_agent_tools_basic.py  03_agent_stream_basic.py  04_agent_without_mem.py  05_agent_self_mem.py  06_agent_mem_in_memory.py  07_agent_mem_postgresSaver.py  08_agent_stategraph_checkpointer.py  09_agent_real_world.py  10_smart_translator.py
src/04_RAG/: 01_rag_indexing.py  02_rag_agent.py
src/05_human_in_the_loop/: 01_human_itl_basic.py
src/06_sql_agent/: 01_sql_agent_basic.py  02_sql_agent_HITL.py
src/07_multi_agent/: calendar_agent.py  calendar_agent_HITL.py  email_agent.py  email_agent_HITL.py  supervisor_agent.py  supervisor_agent_HITL.py
src/08_deepagent/: 01_agent_tavily_search.py  02_deepagent_basic.py  03_weather_search.py
src/09_skills/: data_agent.py
(+7 files in other folders)
